--- a/style.css
+++ b/style.css
@@ -1,2 +1,8 @@
 .cabecalho {
-  background-color: 
+  background-color: #f39c1a;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 24px 0;
+}
