--- a/style.css
+++ b/style.css
@@ -6,3 +6,30 @@
   align-items: center;
   padding: 24px 0;
 }
+
+.cabecalho-imagem{
+  width: 10%;
+}
+
+.cabecalho-lista-item{
+  display:  inline-block;
+  margin: 0 16px;
+  font-size: 16px;
+}
+
+.escola-imagem{
+  width: 25%;
+}
+.escola{
+  background-image: linear-gradient( #f39c1a, #411500);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
+}
+
+.escola-div-conteudo{
+  width: 35%
+  ;
+}
