--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
   padding: 24px 0;
 }
 
-.escola-div-conteudo{
+.escola-div-conteudo-1{
   width: 35%;
+}
+
+.escola-div-conteudo-2{
+  width: 20%;
 }
