--- a/style.css
+++ b/style.css
@@ -31,11 +31,12 @@
 
 .escola-div-conteudo{
   width: 35%;
+}
 
 .escola-div-conteudo-1{
   width: 35%;
 }
 
 .escola-div-conteudo-2{
-  width: 30%;
+  width: 35%;
 }
